--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -25,6 +25,7 @@
   {% else %}ERROR Please contact technical support/dev
   {% endif %}
   </div></div><br>
+  Last updated {{domainapplication.updated_at}}
 
 <p>{% include "includes/domain_application.html" %}</p>
 
@@ -32,13 +33,14 @@
 
 <p><h2>Summary of your domain request</h2></p> 
 
+<section class="review__step">
 <p><hr><div class="review__step__name">Type of organization</div> {{ domainapplication.get_organization_type_display }}</p>
 {% if domainapplication.tribe_name %}<p>{{ domainapplication.tribe_name }}</p>{% endif %}
 {% if domainapplication.federally_recognized_tribe %}<p>Federally-recognized tribe</p>{% endif %}
 {% if domainapplication.state_recognized_tribe %}<p>State-recognized tribe</p>{% endif %}
-{% if domainapplication.get_federal_type_display %}<p>{{ domainapplication.get_federal_type_display }}</p>{% endif %}
-{% if domainapplication.is_election_board %}<p>{{ domainapplication.is_election_board}}</p>{% endif %}
-{% if domainapplication.organization_name %}<p>{% include "includes/organization_address.html" with organization=domainapplication %}</p>{% endif %}
+{% if domainapplication.get_federal_type_display %}<p><hr><div class="review__step__name">Federal government branch</div>{{ domainapplication.get_federal_type_display }}</p>{% endif %}
+{% if domainapplication.is_election_board %}<p><hr><div class="review__step__name">Election Office</div>{{ domainapplication.is_election_board}}</p>{% endif %}
+{% if domainapplication.organization_name %}<p><hr><div class="review__step__name">Organization address</div> {% include "includes/organization_address.html" with organization=domainapplication %}</p>{% endif %}
 {% if domainapplication.type_of_work %}<p>{{domainapplication.type_of_work}}</p>{% endif %}
 {% if domainapplication.more_organization_information %}<p>{{domainapplication.more_organization_information}}</p>{% endif %}
 {% if domainapplication.authorizing_official %}<p><hr><div class="review__step__name">Authorizing Official</div> {% include "includes/contact.html" with contact=domainapplication.authorizing_official %}</p>{% endif %}
@@ -74,6 +76,7 @@
 
 
 </div>
+</section>
 
 
 {% endblock %}
