--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -13,7 +13,6 @@
   class="usa-summary-box"
   role="region"
   aria-labelledby="summary-box-key-information"
-  summary-box-background-color="gray-90"
 >
 <div class="usa-summary-box__body" style="display:inline-table;">
   <h3 class="usa-summary-box__heading" id="summary-box-key-information">
@@ -25,7 +24,8 @@
   {% else %}ERROR Please contact technical support/dev
   {% endif %}
   </div></div><br>
-  Last updated {{domainapplication.updated_at}}
+  <p> <b class="review__step__name">Last updated:</b> {{domainapplication.updated_at}}</p>
+  <p> <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
 
 <p>{% include "includes/domain_application.html" %}</p>
 
@@ -34,47 +34,76 @@
 <p><h2>Summary of your domain request</h2></p> 
 
 <section class="review__step">
-<p><hr><div class="review__step__name">Type of organization</div> {{ domainapplication.get_organization_type_display }}</p>
-{% if domainapplication.tribe_name %}<p>{{ domainapplication.tribe_name }}</p>{% endif %}
-{% if domainapplication.federally_recognized_tribe %}<p>Federally-recognized tribe</p>{% endif %}
-{% if domainapplication.state_recognized_tribe %}<p>State-recognized tribe</p>{% endif %}
-{% if domainapplication.get_federal_type_display %}<p><hr><div class="review__step__name">Federal government branch</div>{{ domainapplication.get_federal_type_display }}</p>{% endif %}
-{% if domainapplication.is_election_board %}<p><hr><div class="review__step__name">Election Office</div>{{ domainapplication.is_election_board}}</p>{% endif %}
-{% if domainapplication.organization_name %}<p><hr><div class="review__step__name">Organization address</div> {% include "includes/organization_address.html" with organization=domainapplication %}</p>{% endif %}
-{% if domainapplication.type_of_work %}<p>{{domainapplication.type_of_work}}</p>{% endif %}
-{% if domainapplication.more_organization_information %}<p>{{domainapplication.more_organization_information}}</p>{% endif %}
-{% if domainapplication.authorizing_official %}<p><hr><div class="review__step__name">Authorizing Official</div> {% include "includes/contact.html" with contact=domainapplication.authorizing_official %}</p>{% endif %}
-<p><hr><div class="review__step__name">Organization website</div><ul class="add-list-reset">
-  {% for site in domainapplication.current_websites.all %}
-    <li>{{ site.website }}</li>
-  {% empty %}
-    <li>None</li>
-  {% endfor %}</ul></p>
-{% if domainapplication.requested_domain.name %}<p><hr><div class="review__step__name"> .gov domain </div> <ul class="add-list-reset margin-bottom-105">
-  <li>{{ domainapplication.requested_domain.name|default:"Incomplete" }}</li>
-</ul>
-<ul class="add-list-reset">
-  {% for site in domainapplication.alternative_domains.all %}
-    <li>{{ site.website }}</li>
-  {% endfor %}
-</ul></p>{% endif %}
-{% if domainapplication.purpose %}<p><hr><div class="review__step__name">Purpose of your domain </div> {{ domainapplication.purpose }}</p>{% endif %}
-{% if domainapplication.submitter %}<p><hr><div class="review__step__name">Your contact information</div>
-                <div class="margin-bottom-105">
-                  {% include "includes/contact.html" with contact=domainapplication.submitter %}
-                </div>{% endif %}
-{% for other in domainapplication.other_contacts.all %}
+<p>
+  <hr><div class="review__step__name">Type of organization</div> 
+    {{ domainapplication.get_organization_type_display }}
+  </p>
+
+  {% if domainapplication.tribe_name %}
+    <p>{{ domainapplication.tribe_name }}</p>
+    {% endif %}
+  {% if domainapplication.federally_recognized_tribe %}
+    <p>Federally-recognized tribe</p>
+    {% endif %}
+  {% if domainapplication.state_recognized_tribe %}
+    <p>State-recognized tribe</p>
+    {% endif %}
+  {% if domainapplication.get_federal_type_display %}
+    <p><hr><div class="review__step__name">Federal government branch</div>
+      {{ domainapplication.get_federal_type_display }}</p>
+    {% endif %}
+  {% if domainapplication.is_election_board %}
+    <p><hr><div class="review__step__name">Election Office</div>{{ domainapplication.is_election_board}}</p>
+    {% endif %}
+  {% if domainapplication.organization_name %}
+    <p><hr><div class="review__step__name">Organization address</div> 
+      {% include "includes/organization_address.html" with organization=domainapplication %}</p>
+      {% endif %}
+  {% if domainapplication.type_of_work %}
+    <p>{{domainapplication.type_of_work}}</p>
+    {% endif %}
+  {% if domainapplication.more_organization_information %}
+    <p>{{domainapplication.more_organization_information}}</p>
+    {% endif %}
+  {% if domainapplication.authorizing_official %}
+    <p><hr><div class="review__step__name">Authorizing Official</div> 
+    {% include "includes/contact.html" with contact=domainapplication.authorizing_official %}</p>
+    {% endif %}
+  <p><hr><div class="review__step__name">Organization website</div><ul class="add-list-reset">
+    {% for site in domainapplication.current_websites.all %}
+     <li>{{ site.website }}</li>
+    {% empty %}
+     <li>None</li>
+    {% endfor %}</ul></p>
+  {% if domainapplication.requested_domain.name %}
+  <p><hr><div class="review__step__name"> .gov domain </div> <ul class="add-list-reset margin-bottom-105">
+    <li>{{ domainapplication.requested_domain.name|default:"Incomplete" }}</li>
+    </ul>
+  <ul class="add-list-reset">
+    {% for site in domainapplication.alternative_domains.all %}
+     <li>{{ site.website }}</li>
+   {% endfor %}
+  </ul></p>
+  {% endif %}
+  {% if domainapplication.purpose %}
+    <p><hr><div class="review__step__name">Purpose of your domain </div> 
+      {{ domainapplication.purpose }}</p>
+      {% endif %}
+  {% if domainapplication.submitter %}
+    <p><hr><div class="review__step__name">Your contact information</div>
+        <div class="margin-bottom-105">
+        {% include "includes/contact.html" with contact=domainapplication.submitter %}
+        </div>
+    {% endif %}
+  {% for other in domainapplication.other_contacts.all %}
                 <div class="margin-bottom-105">
                   {% include "includes/contact.html" with contact=other %}
                 </div>
               {% empty %}
                 None
               {% endfor %}</p>
-              <p><hr><div class="review__step__name">Anything else we should know?</div></p>
-{{ domainapplication.anything_else|default:"No" }}
-
-
-
+  <p><hr><div class="review__step__name">Anything else we should know?</div></p>
+  {{ domainapplication.anything_else|default:"No" }}
 </div>
 </section>
 
