--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Apply for a .gov domain – Status{% endblock %}
+{% block title %}Domain request status- {{ domainapplication.requested_domain.name }}{% endblock %}
 {% load static url_helpers %}
 
 {% block content %}
@@ -24,10 +24,10 @@
   {% else %}ERROR Please contact technical support/dev
   {% endif %}
   </div></div><br>
-  <p> <b class="review__step__name">Last updated:</b> {{domainapplication.updated_at}}</p>
-  <p> <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
+  <p> <b class="review__step__name">Last updated:</b> {{domainapplication.updated_at}}<br>
+ <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
 
-<p>{% include "includes/domain_application.html" %}</p>
+<p>{% include "includes/domain_application.html" %}</p><br>
 
 <p><button type="" class="usa-button usa-button--outline withdraw_outline">Withdraw Request</button></p>
 
