--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -10,21 +10,24 @@
 <p><h1>Domain request for {{ domainapplication.requested_domain.name }}</h1></p>
 
 <div
-  class="usa-summary-box"
+  class="usa-summary-box dotgov-status-box margin-top-3"
   role="region"
   aria-labelledby="summary-box-key-information"
-  summary-box-background-color="gray-90"
 >
-<div class="usa-summary-box__body" style="display:inline-table;">
-  <h3 class="usa-summary-box__heading" id="summary-box-key-information">
-    Status:
-  </h3>
-  {% if domainapplication.status == 'approved' %} Approved 
-  {% elif domainapplication.status == 'investigating' %} In Review 
-  {% elif domainapplication.status == 'submitted' %} Received
-  {% else %}ERROR Please contact technical support/dev
-  {% endif %}
-  </div></div><br>
+  <div class="usa-summary-box__body">
+    <p class="usa-summary-box__heading font-sans-md margin-bottom-0" 
+        id="summary-box-key-information"
+    > 
+    <span class="text-bold text-primary-darker"> Status</span>: 
+    {% if domainapplication.status == 'approved' %} Approved 
+    {% elif domainapplication.status == 'investigating' %} In Review 
+    {% elif domainapplication.status == 'submitted' %} Received
+    {% else %}ERROR Please contact technical support/dev
+    {% endif %}
+    </p>
+  </div>
+</div>
+<br>
 
 <p>{% include "includes/domain_application.html" %}</p>
 
