Rename 'dashboard' class for section to more generalized

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -221,7 +221,7 @@ a.breadcrumb__back {
   padding-top: units(5);
 }
 
-section.dashboard {
+.section--outlined {
   background-color: color('white');
   border: 1px solid color('base-lighter');
   border-radius: 4px;
