--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -14,7 +14,7 @@
 
   <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p>
 
-  <section class="dashboard tablet:grid-col-11 desktop:grid-col-10">
+  <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Registered domains</h2>
     {% if domains %}
     <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table dotgov-table--stacked">
@@ -53,7 +53,7 @@
     {% endif %}
   </section>
 
-  <section class="dashboard tablet:grid-col-11 desktop:grid-col-10">
+  <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Active domain requests</h2>
     {% if domain_applications %}
     <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table dotgov-table--stacked">
@@ -104,7 +104,7 @@
     <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p>
   </section>
 
-  <section class="dashboard tablet:grid-col-11 desktop:grid-col-10">
+  <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Archived domains</h2>
     <p>You don't have any archived domains</p> 
   </section>
