Change button for registered domains to Manage

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -37,7 +37,16 @@
           <td data-label="Status">{{ domain.application_status|title }}</td>
           <td>
             <a href="{% url "domain" pk=domain.pk %}">
-                Edit <span class="usa-sr-only">{{ domain.name }}</span>
+              <svg 
+                class="usa-icon" 
+                aria-hidden="true" 
+                focusable="false" 
+                role="img" 
+                width="24"
+              > 
+                <use xlink:href="{%static 'img/sprite.svg'%}#settings"></use>
+              </svg>
+                Manage <span class="usa-sr-only">{{ domain.name }}</span>
             </a>
           </td>
         </tr>
