--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -13,11 +13,11 @@
     </p>
   </div>
   <div class="grid-row grid-gap">
-    <div class="grid-col-3">
+    <div class="tablet:grid-col-3">
       {% include 'domain_sidebar.html' %}
     </div>
 
-    <div class="grid-col-9">
+    <div class="tablet:grid-col-9">
       <main id="main-content" class="grid-container">
 
 	  <a href="{% url 'home' %}" class="breadcrumb__back">
