--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="grid-container">
   <div class="grid-row"> 
-    <p class="font-body-sm margin-top-0 margin-bottom-2 
+    <p class="font-body-md margin-top-0 margin-bottom-2 
               text-primary-darker text-semibold"
     >
       {{ domain.name }}
