Add space before button on domain mgmt home

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -12,7 +12,11 @@
 <div class="tablet:grid-offset-1 desktop:grid-offset-2">
   <h1>Manage your domains</h2>
 
-  <p><a href="{% url 'application:' %}" class="usa-button">Start a new domain request</a></p>
+  <p class="margin-top-4">
+    <a href="{% url 'application:' %}" class="usa-button">
+      Start a new domain request
+    </a>
+  </p>
 
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Registered domains</h2>
