Reorder link tag on header to fix focus

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -140,9 +140,9 @@
       <div class="usa-navbar">
         {% block logo %}
         <div class="usa-logo" id="extended-logo">
-           <a href="{% url 'home' %}">
-           <strong class="usa-logo__text" >.gov </strong>
-           </a>
+          <strong class="usa-logo__text" >
+            <a href="{% url 'home' %}"> .gov </a>
+          </strong>
         </div>
         {% endblock %}
         <button type="button" class="usa-menu-btn">Menu</button>
