--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -9,7 +9,7 @@
     <p class="font-body-md margin-top-0 margin-bottom-2 
               text-primary-darker text-semibold"
     >
-      {{ domain.name }}
+      <span class="usa-sr-only"> Domain name:</span> {{ domain.name }} 
     </p>
   </div>
   <div class="grid-row grid-gap">
