Add domain name to title of mgmt pages, use vertical bar throughout

--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -1,7 +1,7 @@
 {% extends "domain_base.html" %}
 {% load static %}
 
-{% block title %}User management{% endblock %}
+{% block title %}User management | {{ domain.name }} | {% endblock %}
 
 {% block domain_content %}
   <h1>User management</h1>
