applied CSS feedback

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -4,7 +4,7 @@
 {% load static url_helpers %}
 
 {% block content %}
-<div class="grid-container">
+<div class="grid-col desktop:grid-offset-2 desktop:grid-col-8">
  
 
 <p><h1>Domain request for {{ domainapplication.requested_domain.name }}</h1></p>
