--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -132,8 +132,8 @@ a.breadcrumb__back {
 }
 
 .withdraw_outline {
-  box-shadow: inset 0 0 0 2px #C41230;
-  color: #C41230;
+  box-shadow: inset 0 0 0 2px color('error');
+  color: color('error');
 }
 
 .usa-sidenav {
