Update intro text for contact info

--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -8,8 +8,7 @@
   changes below. Changing your contact information here won’t affect your login.gov
   account information.</p>
 
-  <p>The contact information you provide here won’t be public and will only be used for
-  the .gov registry.</p>
+  <p>The contact information you provide here won’t be public and will only be used to support your domain request.</p>
 {% endblock %}
 
 
