--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -133,9 +133,13 @@ a.breadcrumb__back {
   }
 }
 
-.withdraw_outline {
+a.withdraw_outline {
   box-shadow: inset 0 0 0 2px color('error');
   color: color('error');
+}
+
+a.withdraw {
+  background-color: color('error');
 }
 
 .usa-sidenav {
