CSS stuff and unit tests

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -32,7 +32,7 @@
 
 <p>{% include "includes/domain_application.html" %}</p>
 
-<p><a href="{% url 'application-withdraw-confirmation' domainapplication.id %}" class="usa-button usa-button--outline withdraw_outline">Withdraw Request</a></p>
+<p><a href="{% url 'application-withdraw-confirmation' domainapplication.id %}" class="withdraw_outline usa-button usa-button--outline">Withdraw Request</a></p>
 
 <p><h2>Summary of your domain request</h2></p> 
 
