--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -138,6 +138,11 @@ a.withdraw_outline {
   color: color('error');
 }
 
+a.withdraw_outline:visited {
+  box-shadow: inset 0 0 0 2px color('error');
+  color: color('error');
+}
+
 a.withdraw {
   background-color: color('error');
 }
