Update intro text for requestor contact info

--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -4,12 +4,12 @@
 {% block form_instructions %}
   <p>We’ll use this information to contact you about your domain request.</p>
 
-  <p>If you’d like us to use a different name, email, or phone number you can make those
-  changes below. Changing your contact information here won’t affect your login.gov
+<p>If you’d like us to use a different name, email, or phone number you can make those 
+  changes below. Changing your contact information here won’t affect your Login.gov
   account information.</p>
 
-  <p>The contact information you provide here won’t be public and will only be used for
-  the .gov registry.</p>
+  <p>The contact information you provide here won’t be public and will only be used to 
+    support your domain request.</p>
 {% endblock %}
 
 
