--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -143,6 +143,33 @@ a.withdraw_outline:visited {
   color: color('error');
 }
 
+a.withdraw_outline:hover {
+  box-shadow: inset 0 0 0 2px color('error');
+  color: color('error-dark');
+}
+
+a.withdraw_outline:focus {
+  box-shadow: inset 0 0 0 2px color('error');
+  color: color('error-dark');
+}
+
+a.withdraw_outline:active {
+  box-shadow: inset 0 0 0 2px color('error');
+  color: color('error-darker');
+}
+
+a.withdraw:focus {
+  background-color: color('error-dark');
+}
+
+a.withdraw:hover {
+  background-color: color('error-dark');
+}
+
+a.withdraw:active {
+  background-color: color('error-darker');
+}
+
 a.withdraw {
   background-color: color('error');
 }
