Add new summary-item to list of rules for border

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -182,10 +182,12 @@ a.breadcrumb__back {
   }
 }
 
+.summary-item,
 .review__step {
   margin-top: units(3);
 }
 
+.summary-item hr,
 .review__step hr {
   border: none; //reset
   border-top: 1px solid color('primary-dark');
