Aligning with .gov style

--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -7,7 +7,7 @@
   </h2>
 
   <p>Your authorizing official is the person within your organization who can authorize
-  your domain request. This is generally the highest ranking or highest elected official
+  your domain request. This is generally the highest-ranking or highest-elected official
   in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an
   authorizing official</a>.</p>
 
