Use summary item for all fields

--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -6,8 +6,40 @@
   > 
   {{ title }} 
   </p>
+  {% if address %}
+    {% include "includes/organization_address.html" with organization=value %}
+  {% elif contact %}
+    {% if list %}
+      {% if value|length == 1 %}
+        {% include "includes/contact.html" with contact=value|first %}
+      {% else %}
+        <ul class="usa-list usa-list--unstyled margin-top-0">
+          {% for item in value %}
+          <li><p>Conatct {{forloop.counter}}</p>{% include "includes/contact.html" with contact=item %}</li>
+          {% empty %}
+           <li>None</li>
+          {% endfor %}</ul></p>
+        </ul>
+      {% endif %}
+    {% else %}
+      {% include "includes/contact.html" with contact=value %}
+    {% endif %}
+  {% elif list %}
+    {% if value|length == 1 %}
+      <p class="margin-top-0">{{ value | first }} </p>
+    {% else %}
+      <ul class="usa-list margin-top-0">
+        {% for item in value %}
+         <li>{{ item }}</li>
+        {% empty %}
+         <li>None</li>
+        {% endfor %}</ul></p>
+      </ul>
+    {% endif %}
+  {% else %}
   <p class="margin-top-0">
-  {{ value }}
+    {{ value }}
   </p>
+  {% endif %}
   
 
