--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -4,6 +4,7 @@
 {% load static url_helpers %}
 
 {% block content %}
+<main id="main-content" class="grid-container register-form-step">
 <div class="grid-col desktop:grid-offset-2 desktop:grid-col-8">
  
 
@@ -36,12 +37,73 @@
 
 <p><h2>Summary of your domain request</h2></p> 
 
-<section class="review__step">
-<p>
-  <hr><div class="review__step__name">Type of organization</div> 
-    {{ domainapplication.get_organization_type_display }}
-  </p>
+{% include "includes/summary_item.html" with title='Type of organization' value=domainapplication.get_organization_type_display %}
 
+{% if domainapplication.tribe_name %}
+  {% include "includes/summary_item.html" with title='Tribal government' value=domainapplication.tribe_name%}
+  {% if domainapplication.federally_recognized_tribe %}
+    <p>Federally-recognized tribe</p>
+    {% endif %}
+  {% if domainapplication.state_recognized_tribe %}
+    <p>State-recognized tribe</p>
+    {% endif %}
+{% endif %}
+
+{% if domainapplication.get_federal_type_display %}
+  {% include "includes/summary_item.html" with title='Federal government branch' value=domainapplication.get_federal_type_display %}
+{% endif %}
+
+{% if domainapplication.is_election_board %}
+  {% include "includes/summary_item.html" with title='Election office' value=domainapplication.is_election_board %}
+{% endif %}
+
+{% if domainapplication.organization_name %}
+  {% include "includes/summary_item.html" with title='Organization address' value=domainapplication  address='true' %}
+{% endif %}
+
+{% if domainapplication.type_of_work %}
+  {% include "includes/summary_item.html" with title='Type of work' value=domainapplication.type_of_work %}
+{% endif %}
+
+{% if domainapplication.more_organization_information %}
+  {% include "includes/summary_item.html" with title='Further information about the government organization' value=domainapplication.type_of_work %}
+{% endif %}
+
+{% if domainapplication.more_organization_information %}
+  {% include "includes/summary_item.html" with title='Further information about the government organization' value=domainapplication.type_of_work %}
+{% endif %}
+
+{% if domainapplication.authorizing_official %}
+  {% include "includes/summary_item.html" with title='Authorizing official' value=domainapplication.authorizing_official contact='true' %}
+{% endif %}
+
+{% if domainapplication.current_websites.all %}
+  {% include "includes/summary_item.html" with title='Current website for your organization' value=domainapplication.current_websites.all list='true' %}
+{% endif %}
+
+{% if domainapplication.purpose %}
+  {% include "includes/summary_item.html" with title='Purpose of your domain' value=domainapplication.purpose %}
+{% endif %}
+
+{% if domainapplication.submitter %}
+  {% include "includes/summary_item.html" with title='Your contact information' value=domainapplication.submitter contact='true'%}
+{% endif %}
+
+ {% include "includes/summary_item.html" with title='Other employees from your organization' value=domainapplication.other_contacts.all contact='true' list='true' %}
+
+ {% include "includes/summary_item.html" with title='Anything else we should know' value=domainapplication.anything_else|default:"No" %}
+
+----
+{% for k,v in domainapplication.get_context_data %}
+{{k}}- {{v}}
+{% endfor %}
+----
+
+
+<section class="review__step">
+  <hr class="margin-bottom-05">
+  <p class="review__step__name margin-top-0 margin-bottom">Type of organization</p> 
+  <p class="margin-top-0"> {{ domainapplication.get_organization_type_display }} </p>
   {% if domainapplication.tribe_name %}
     <p>{{ domainapplication.tribe_name }}</p>
     {% endif %}
@@ -110,5 +172,5 @@
 </div>
 </section>
 
-
+</main>
 {% endblock %}
