--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -34,8 +34,10 @@
 <p>{% include "includes/domain_application.html" %}</p>
 
 <p><button type="" class="usa-button usa-button--outline withdraw_outline">Withdraw Request</button></p>
-</div> 
 
+</div>
+
+<div class="grid-col desktop:grid-offset-2 maxw-tablet">
 <h2>Summary of your domain request</h2> 
 
 {% include "includes/summary_item.html" with title='Type of organization' value=domainapplication.get_organization_type_display %}
