--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -5,171 +5,94 @@
 
 {% block content %}
 <main id="main-content" class="grid-container register-form-step">
-<div class="grid-col desktop:grid-offset-2 desktop:grid-col-8">
- 
+  <div class="grid-col desktop:grid-offset-2 desktop:grid-col-8">
+    <h1>Domain request for {{ domainapplication.requested_domain.name }}</h1>
+    <div
+        class="usa-summary-box dotgov-status-box margin-top-3" 
+        role="region"
+        aria-labelledby="summary-box-key-information"
+    >
+      <div class="usa-summary-box__body">
+        <p class="usa-summary-box__heading font-sans-md margin-bottom-0" 
+           id="summary-box-key-information"
+        > 
+          <span class="text-bold text-primary-darker">
+             Status:
+          </span>
+          {% if domainapplication.status == 'approved' %} Approved 
+          {% elif domainapplication.status == 'investigating' %} In Review 
+          {% elif domainapplication.status == 'submitted' %} Received
+          {% else %}ERROR Please contact technical support/dev
+          {% endif %}
+        </p>
+      </div>
+    </div>
+    <br>
+    <p> <b class="review__step__name">Last updated:</b> {{domainapplication.updated_at|date:"F j, Y"}}<br>
+    <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
+    <p>{% include "includes/domain_application.html" %}</p>
+    <p><button type="" class="usa-button usa-button--outline withdraw_outline">
+      Withdraw Request</button>
+    </p>
+  </div>
 
-<h1>Domain request for {{ domainapplication.requested_domain.name }}</h1>
+  <div class="grid-col desktop:grid-offset-2 maxw-tablet">
+    <h2>Summary of your domain request</h2> 
 
-<div
-  class="usa-summary-box dotgov-status-box margin-top-3" 
-  role="region"
-  aria-labelledby="summary-box-key-information"
->
-<div class="usa-summary-box__body">
-  <p class="usa-summary-box__heading font-sans-md margin-bottom-0" 
-        id="summary-box-key-information"
-    > 
-    <span class="text-bold text-primary-darker">
-    Status:
-  </span>
-  {% if domainapplication.status == 'approved' %} Approved 
-  {% elif domainapplication.status == 'investigating' %} In Review 
-  {% elif domainapplication.status == 'submitted' %} Received
-  {% else %}ERROR Please contact technical support/dev
-  {% endif %}
-  </div></div><br>
-  <p> <b class="review__step__name">Last updated:</b> {{domainapplication.updated_at|date:"F j, Y"}}<br>
- <b class="review__step__name">Request #:</b> {{domainapplication.id}}</p>
+    {% include "includes/summary_item.html" with title='Type of organization' value=domainapplication.get_organization_type_display %}
 
-<p>{% include "includes/domain_application.html" %}</p>
-
-<p><button type="" class="usa-button usa-button--outline withdraw_outline">Withdraw Request</button></p>
-
-</div>
-
-<div class="grid-col desktop:grid-offset-2 maxw-tablet">
-<h2>Summary of your domain request</h2> 
-
-{% include "includes/summary_item.html" with title='Type of organization' value=domainapplication.get_organization_type_display %}
-
-{% if domainapplication.tribe_name %}
-  {% include "includes/summary_item.html" with title='Tribal government' value=domainapplication.tribe_name%}
-  {% if domainapplication.federally_recognized_tribe %}
-    <p>Federally-recognized tribe</p>
-    {% endif %}
-  {% if domainapplication.state_recognized_tribe %}
-    <p>State-recognized tribe</p>
-    {% endif %}
-{% endif %}
-
-{% if domainapplication.get_federal_type_display %}
-  {% include "includes/summary_item.html" with title='Federal government branch' value=domainapplication.get_federal_type_display %}
-{% endif %}
-
-{% if domainapplication.is_election_board %}
-  {% include "includes/summary_item.html" with title='Election office' value=domainapplication.is_election_board %}
-{% endif %}
-
-{% if domainapplication.organization_name %}
-  {% include "includes/summary_item.html" with title='Organization address' value=domainapplication  address='true' %}
-{% endif %}
-
-{% if domainapplication.type_of_work %}
-  {% include "includes/summary_item.html" with title='Type of work' value=domainapplication.type_of_work %}
-{% endif %}
-
-{% if domainapplication.more_organization_information %}
-  {% include "includes/summary_item.html" with title='Further information about the government organization' value=domainapplication.more_organization_information %}
-{% endif %}
-
-{% if domainapplication.authorizing_official %}
-  {% include "includes/summary_item.html" with title='Authorizing official' value=domainapplication.authorizing_official contact='true' %}
-{% endif %}
-
-{% if domainapplication.current_websites.all %}
-  {% include "includes/summary_item.html" with title='Current website for your organization' value=domainapplication.current_websites.all list='true' %}
-{% endif %}
-
-{% if domainapplication.purpose %}
-  {% include "includes/summary_item.html" with title='Purpose of your domain' value=domainapplication.purpose %}
-{% endif %}
-
-{% if domainapplication.submitter %}
-  {% include "includes/summary_item.html" with title='Your contact information' value=domainapplication.submitter contact='true'%}
-{% endif %}
-
- {% include "includes/summary_item.html" with title='Other employees from your organization' value=domainapplication.other_contacts.all contact='true' list='true' %}
-
- {% include "includes/summary_item.html" with title='Anything else we should know' value=domainapplication.anything_else|default:"No" %}
-
-----
-{% for k,v in domainapplication.get_context_data %}
-{{k}}- {{v}}
-{% endfor %}
-----
-
-
-<section class="review__step">
-  <hr class="margin-bottom-05">
-  <p class="review__step__name margin-top-0 margin-bottom">Type of organization</p> 
-  <p class="margin-top-0"> {{ domainapplication.get_organization_type_display }} </p>
-  {% if domainapplication.tribe_name %}
-    <p>{{ domainapplication.tribe_name }}</p>
-    {% endif %}
-  {% if domainapplication.federally_recognized_tribe %}
-    <p>Federally-recognized tribe</p>
-    {% endif %}
-  {% if domainapplication.state_recognized_tribe %}
-    <p>State-recognized tribe</p>
-    {% endif %}
-  {% if domainapplication.get_federal_type_display %}
-    <p><hr><div class="review__step__name">Federal government branch</div>
-      {{ domainapplication.get_federal_type_display }}</p>
-    {% endif %}
-  {% if domainapplication.is_election_board %}
-    <p><hr><div class="review__step__name">Election Office</div>{{ domainapplication.is_election_board}}</p>
-    {% endif %}
-  {% if domainapplication.organization_name %}
-    <p><hr><div class="review__step__name">Organization address</div> 
-      {% include "includes/organization_address.html" with organization=domainapplication %}</p>
+    {% if domainapplication.tribe_name %}
+      {% include "includes/summary_item.html" with title='Tribal government' value=domainapplication.tribe_name%}
+      {% if domainapplication.federally_recognized_tribe %}
+      <p>Federally-recognized tribe</p>
       {% endif %}
-  {% if domainapplication.type_of_work %}
-    <p>{{domainapplication.type_of_work}}</p>
-    {% endif %}
-  {% if domainapplication.more_organization_information %}
-    <p>{{domainapplication.more_organization_information}}</p>
-    {% endif %}
-  {% if domainapplication.authorizing_official %}
-    <p><hr><div class="review__step__name">Authorizing Official</div> 
-    {% include "includes/contact.html" with contact=domainapplication.authorizing_official %}</p>
-    {% endif %}
-  <p><hr><div class="review__step__name">Organization website</div><ul class="add-list-reset">
-    {% for site in domainapplication.current_websites.all %}
-     <li>{{ site.website }}</li>
-    {% empty %}
-     <li>None</li>
-    {% endfor %}</ul></p>
-  {% if domainapplication.requested_domain.name %}
-  <p><hr><div class="review__step__name"> .gov domain </div> <ul class="add-list-reset margin-bottom-105">
-    <li>{{ domainapplication.requested_domain.name|default:"Incomplete" }}</li>
-    </ul>
-  <ul class="add-list-reset">
-    {% for site in domainapplication.alternative_domains.all %}
-     <li>{{ site.website }}</li>
-   {% endfor %}
-  </ul></p>
-  {% endif %}
-  {% if domainapplication.purpose %}
-    <p><hr><div class="review__step__name">Purpose of your domain </div> 
-      {{ domainapplication.purpose }}</p>
+      
+      {% if domainapplication.state_recognized_tribe %}
+      <p>State-recognized tribe</p>
       {% endif %}
-  {% if domainapplication.submitter %}
-    <p><hr><div class="review__step__name">Your contact information</div>
-        <div class="margin-bottom-105">
-        {% include "includes/contact.html" with contact=domainapplication.submitter %}
-        </div>
     {% endif %}
-  {% for other in domainapplication.other_contacts.all %}
-                <div class="margin-bottom-105">
-                  {% include "includes/contact.html" with contact=other %}
-                </div>
-              {% empty %}
-                None
-              {% endfor %}</p>
-  <p><hr><div class="review__step__name">Anything else we should know?</div></p>
-  {{ domainapplication.anything_else|default:"No" }}
-</div>
-</section>
+
+    {% if domainapplication.get_federal_type_display %}
+      {% include "includes/summary_item.html" with title='Federal government branch' value=domainapplication.get_federal_type_display %}
+    {% endif %}
+
+    {% if domainapplication.is_election_board %}
+      {% include "includes/summary_item.html" with title='Election office' value=domainapplication.is_election_board %}
+    {% endif %}
+
+    {% if domainapplication.organization_name %}
+      {% include "includes/summary_item.html" with title='Organization address' value=domainapplication  address='true' %}
+    {% endif %}
+
+    {% if domainapplication.type_of_work %}
+      {% include "includes/summary_item.html" with title='Type of work' value=domainapplication.type_of_work %}
+    {% endif %}
+
+    {% if domainapplication.more_organization_information %}
+      {% include "includes/summary_item.html" with title='Further information about the government organization' value=domainapplication.more_organization_information %}
+    {% endif %}
+
+    {% if domainapplication.authorizing_official %}
+      {% include "includes/summary_item.html" with title='Authorizing official' value=domainapplication.authorizing_official contact='true' %}
+    {% endif %}
+
+    {% if domainapplication.current_websites.all %}
+      {% include "includes/summary_item.html" with title='Current website for your organization' value=domainapplication.current_websites.all list='true' %}
+    {% endif %}
+
+    {% if domainapplication.purpose %}
+      {% include "includes/summary_item.html" with title='Purpose of your domain' value=domainapplication.purpose %}
+    {% endif %}
+
+    {% if domainapplication.submitter %}
+      {% include "includes/summary_item.html" with title='Your contact information' value=domainapplication.submitter contact='true'%}
+    {% endif %}
+
+    {% include "includes/summary_item.html" with title='Other employees from your organization' value=domainapplication.other_contacts.all contact='true' list='true' %}
+
+    {% include "includes/summary_item.html" with title='Anything else we should know' value=domainapplication.anything_else|default:"No" %}
+
+  </div>
 
 </main>
 {% endblock %}
