Update heading color

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="grid-col desktop:grid-offset-2 maxw-tablet">
-    <h2>Summary of your domain request</h2> 
+    <h2 class="text-primary-darker"> Summary of your domain request </h2> 
 
     {% include "includes/summary_item.html" with title='Type of organization' value=domainapplication.get_organization_type_display %}
 
