Use a utility class for spacing instead of addl rule

--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -1,4 +1,4 @@
-<section class="summary-item">
+<section class="summary-item margin-top-3">
   <hr class="" />
   <p class="summary-item__title 
             text-primary-dark text-semibold
