--- a/src/registrar/templates/includes/domain_application.html
+++ b/src/registrar/templates/includes/domain_application.html
@@ -1,14 +1,10 @@
-<h2 class="margin-top-0 margin-bottom-2 
-              text-primary-darker text-semibold"
->
+<h2 class="margin-top-0 margin-bottom-2 text-primary-darker text-semibold" > 
   Next steps
 </h2>
 <p>We received your .gov domain request. Our next step is to review your request. This usually takes two weeks. We’ll email you with questions or when we complete our review. Contact us with any questions.</p>
 
-<h2 class="margin-top-0 margin-bottom-2 
-              text-primary-darker text-semibold"
->
-Need to make changes?
+<h2 class="margin-top-0 margin-bottom-2 text-primary-darker text-semibold">
+  Need to make changes?
 </h2>
 
 <p>If you need to change your request you have to first withdraw it. Once you withdraw the request you can edit it and submit it again. Changing your request might add to the wait time.</p>
