Add vertical seperator in the title for application status page

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Domain request status- {{ domainapplication.requested_domain.name }} | {% endblock %}
+{% block title %}Domain request status | {{ domainapplication.requested_domain.name }} | {% endblock %}
 {% load static url_helpers %}
 
 {% block content %}
