--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -14,7 +14,7 @@
             <div class="mobile-lg:grid-col-auto">
               <img
                 class="usa-footer__logo-img"
-                src="{% static 'img/dottedgov-round.svg' %}"
+                src="{% static 'img/dotgov_logo.svg' %}"
                 alt="dot gov registrar logo"
                 width="56px"
               />
@@ -26,8 +26,12 @@
             </p>
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap">
+
                 <div class="grid-col-auto">
-                  <a href="mailto:registrar@dotgov.gov">registrar@dotgov.gov</a>
+                  <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/help/"> Help </a>
+                </div>
+                <div class="grid-col-auto">
+                  <a href="mailto:registrar@dotgov.gov" class="usa-link">registrar@dotgov.gov</a>
                 </div>
               </div>
             </address>
