--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -63,7 +63,7 @@
     {% endif %}
 
     {% if domainapplication.organization_name %}
-      {% include "includes/summary_item.html" with title='Organization address' value=domainapplication  address='true' %}
+      {% include "includes/summary_item.html" with title='Organization name and mailing address' value=domainapplication  address='true' %}
     {% endif %}
 
     {% if domainapplication.type_of_work %}
@@ -71,7 +71,7 @@
     {% endif %}
 
     {% if domainapplication.more_organization_information %}
-      {% include "includes/summary_item.html" with title='Further information about the government organization' value=domainapplication.more_organization_information %}
+      {% include "includes/summary_item.html" with title='More information about your organization' value=domainapplication.more_organization_information %}
     {% endif %}
 
     {% if domainapplication.authorizing_official %}
