Updated get.gov links in footer

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -74,7 +74,7 @@
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
             <a
-              href="https://home.dotgov.gov/about/"
+              href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/about/"
               class="usa-identifier__required-link usa-link"
               >About .gov</a
             >
@@ -87,7 +87,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://home.dotgov.gov/privacy/" class="usa-identifier__required-link usa-link"
+            <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/privacy-policy/" class="usa-identifier__required-link usa-link"
               >Privacy policy</a
             >
           </li>
@@ -97,7 +97,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="{% url 'todo' %}" class="usa-identifier__required-link usa-link"
+            <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/vulnerability-disclosure-policy/" class="usa-identifier__required-link usa-link"
               >Vulnerability disclosure policy</a
             >
           </li>
