Move logo to registrar subdirectory, update path

--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -14,7 +14,7 @@
             <div class="mobile-lg:grid-col-auto">
               <img
                 class="usa-footer__logo-img"
-                src="{% static 'img/dotgov_logo.svg' %}"
+                src="{% static 'img/registrar/dotgov_logo.svg' %}"
                 alt="dot gov registrar logo"
                 width="56px"
               />
