--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -68,7 +68,7 @@
       <div class="usa-alert">
         <div class="usa-alert__body">
           <p class="usa-alert__text">
-            <strong>TESTING TESTING TESTING</strong> - Do not use real personal information. Demo purposes only.
+            <strong>TESTING TESTING TESTING</strong> - Do not use real personal information. Demo purposes only, ok?
           </p>
         </div>
       </div>
