Match styling of unique identifier to 500 page

--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -30,7 +30,7 @@
 
       {% if log_identifier %}
         <p>Here's a unique identifier for this error.</p>
-        <blockquote>{{ log_identifier }}</blockquote>
+        <p class="text-semibold">{{ log_identifier }}</p>
         <p>{% translate "Please include it if you contact us." %}</p>
       {% endif %}
     </div>
