Add vertical bar to titles, change title for 403

--- a/src/registrar/templates/401.html
+++ b/src/registrar/templates/401.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n static %}
 
-{% block title %}{% translate "Unauthorized" %}{% endblock %}
+{% block title %}{% translate "Unauthorized | " %}{% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container">
