--- a/src/registrar/templates/403.html
+++ b/src/registrar/templates/403.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n static %}
 
-{% block title %}{% translate "Unauthorized" %}{% endblock %}
+{% block title %}{% translate "Forbidden | " %}{% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container">
