--- a/src/registrar/templates/404.html
+++ b/src/registrar/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n static %}
 
-{% block title %}{% translate "Page not found" %}{% endblock %}
+{% block title %}{% translate "Page not found | " %}{% endblock %}
 
 {% block content %}
 <main id="main-content" class="grid-container">
