Fix validation on character count, increase charater count to 1000 on textareas, increase textarea height on desktop

--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -422,3 +422,9 @@ abbr[title] {
   border-bottom: none;
   text-decoration: none;
 }
+
+.usa-textarea {
+  @include at-media('tablet') {
+    height: 20rem;
+  }
+}
